alignment fixing on user profile

--- a/src/frontend/src/style/_user.scss
+++ b/src/frontend/src/style/_user.scss
@@ -70,9 +70,9 @@
 #user-profile {
   #basic-info {
 
-    padding: 1rem 0.5rem;
     border-bottom: 1px solid #0dd;
-    margin-left: 1rem;
+    margin-top: 0.5rem;
+    margin-left: 0.5rem;
     margin-bottom: 1rem;
 
     img {
